--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,8 @@ Protokoll/template.aux
 Protokoll/template.log
 Protokoll/template.synctex.gz
 berechnungen.nb
+*.gz
+Protokoll/template.log
+*.fls
+Protokoll/template.aux
+*.fdb_latexmk
