--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,4 @@ Protokoll/lum.log
 *.nb
 berechnungen.nb
 Messung/maxintenstempfit-eps-converted-to.pdf
+Messung/integrintenstempfit-eps-converted-to.pdf
