--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ Protokoll/phasendiagramme.synctex.gz
 *.bib
 Protokoll/phasendiagramme.log
 *.fls
+Messdaten/.~lock.DTA Ergebnisse TbGdScO3 DyTbScO3.ods#
